  as FreeMiNT people agreed to keep it as the official standard. (VRI)

2013-01-19
- bdos/mem.h bdos/osmem.c: Issue error message & halt when internal OS memory
  is exhausted. (RFB)
- doc/osmemory.txt: Add documentation on internal OS memory. (RFB)

2013-01-20
- bios/scc.h bios/serport.c: Moved struct for SCC chip to new header. (RFB)
- bios/bios.c bios/machine.c bios/startup.s include/config.h: Do not use
  reset instruction if compiling for EmuTOS RAM. (RFB)
- po/POTFILES.in: Add osmem.c to list of files with _(...) macro. (RFB)

2013-01-21
- cli/command.c: Minor improvements to displayed text strings. (RFB)
- cli/command.c: Fix MV command to move rather than copy. (RFB)
- bios/disk.c bios/disk.h bios/ide.c: Add support for not-byteswapped
  disk partitions. (RFB)

2013-01-23
- Makefile bios/startup.S include/asmdefs.h: Added support for the m68k-elf
  toolchain. Use with "make 512 ELF=1". (VRI)
- aes/gemdosif.S aes/gemstart.S bios/aciavecs.S bios/comprimg.S bios/linea.S
  bios/natfeat.S cli/coma.S include/asmdefs.h: Added support for section .rodata
  with ELF toolchain. (VRI)
- include/xbiosbind.h vdi/vdi_col.c: Fix vq_color() & vs_color() for systems
  with videl. (RFB)
- vdi/vdi_col.c: Remove debugging statements. (RFB)

2013-01-24
- bios/blkdev.c bios/blkdev.h bios/floppy.c: Removed useless byteswap member in
  BLKDEV structure. (VRI)
- bios/ide.c bios/ide.h bios/xhdi.c: Fixed recent regression on byteswapped IDE
  disks. (VRI)

2013-01-25
- Makefile bios/clock.c bios/serport.c cli/command.c include/config.h: Added
  the -Wundef option to avoid using undefined preprocessor identifiers. (VRI)
- vdi/vdi_col.c: Minor changes to initial ST/Falcon VDI palettes to agree
  with TOS. (RFB)

2013-01-27
- bios/processor.S include/asmdefs.h: Detect 68ec030 processor subtype. (RFB)
- bios/68030_pmmu.S bios/processor.S bios/tosvars.S include/asmdefs.h
  include/config.h Makefile: Add PMMU tree & enable data caching for
  68030 processors. (RFB)